# hammerhead

./: Cargo.toml
src/: game_tree.rs  main.rs  nn.rs
src/alpha_beta/: heuristic.rs  mod.rs
src/game/: board.rs  heuristics.rs  mod.rs  space.rs  symmetries.rs
src/mcts/: backpropogation.rs  mod.rs  selection.rs  train.rs
