[package]
name = "hammerhead"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
arboriter-mcts = "0.2.1"
candle-core = "0.9.1"
candle-nn = "0.9.1"
clap = { version = "4.5.32", features = ["derive"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"

