[package]
name = "hammerhead"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
candle-core = "0.9.1"
candle-nn = "0.9.1"
clap = { version = "4.5.32", features = ["derive"] }
rayon = "1.10.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tempfile = "3.19.0"

[profile.release]
debug = true